<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".main"
    android:id="@+id/main_layout">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/head"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/base_rate_label"
                android:text="@string/base_rate_label"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/base_rate"
                android:text="@string/base_rate"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_rate_label"
                android:id="@+id/total_rate_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_string"
                android:id="@+id/total_rate" />
        </TableRow>

    </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/head"
        android:scrollbars="none"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_label"
                android:id="@+id/owner_label" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/owner"
                android:spinnerMode="dropdown"
                android:prompt="@string/owner_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_ts_label"
                android:id="@+id/type_ts_label"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type_ts"
                android:spinnerMode="dropdown"
                android:prompt="@string/type_ts_label" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forreg_label"
                android:id="@+id/forreg"
                android:checked="false"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_label"
                android:id="@+id/region_label"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/region"
                android:spinnerMode="dropdown"
                android:prompt="@string/region_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_label"
                android:id="@+id/city_label"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:spinnerMode="dropdown"
                android:prompt="@string/city_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power_label"
                android:id="@+id/power_label"
                android:paddingTop="@dimen/activity_vertical_margin"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/power"
                android:spinnerMode="dropdown"
                android:prompt="@string/power_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malus_label"
                android:id="@+id/malus_label"
                android:paddingTop="@dimen/activity_vertical_margin"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/malus"
                android:spinnerMode="dropdown"
                android:prompt="@string/malus_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longevity_label"
                android:id="@+id/longevity_label"
                android:paddingTop="@dimen/activity_vertical_margin"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/longevity"
                android:spinnerMode="dropdown"
                android:prompt="@string/longevity_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline_label"
                android:id="@+id/deadline_label"
                android:paddingTop="@dimen/activity_vertical_margin"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deadline"
                android:spinnerMode="dropdown"
                android:prompt="@string/deadline_label" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/foreign_label"
                android:id="@+id/foreign"
                android:checked="false"
                android:paddingTop="@dimen/activity_vertical_margin"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foul_label"
                android:id="@+id/foul"
                android:checked="false"
                android:paddingTop="@dimen/activity_vertical_margin"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_label"
                android:id="@+id/access"
                android:checked="false"
                android:paddingTop="@dimen/activity_vertical_margin"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
